--- a/platforms/metal/cl/bootkube-worker.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-worker.yaml.tmpl
@@ -1,4 +1,20 @@
 ---
+networkd:
+  units:
+    {{if .coreos_static_ip}}
+    - name: 00-tectonic.network
+      contents: |
+        [Match]
+        {{if .coreos_network_adapter}}
+        Name={{.coreos_network_adapter}}
+        {{else}}
+        MACAddress={{.coreos_mac_address}}
+        {{end}}
+        [Network]
+        DNS={{.coreos_network_dns}}
+        Address={{.coreos_network_address}}
+        Gateway={{.coreos_network_gateway}}
+    {{end}}
 systemd:
   units:
     - name: docker.service
@@ -35,7 +51,7 @@ systemd:
         ConditionPathExists=!/etc/kubernetes/kubelet.env
         [Service]
         ExecStartPre=/usr/bin/bash -c "docker run --rm -v /etc/kubernetes:/etc/kubernetes {{.kube_version_image}} --kubeconfig=/etc/kubernetes/kubeconfig > /etc/kubernetes/kube.version"
-        ExecStart=/usr/bin/bash -c "echo KUBELET_IMAGE_URL={{.rkt_image_protocol}}{{.kubelet_image_url}} > /etc/kubernetes/kubelet.env; echo KUBELET_IMAGE_TAG=$(tr '+' '_' < /etc/kubernetes/kube.version) >> /etc/kubernetes/kubelet.env; rm /etc/kubernetes/kube.version"
+        ExecStart=/usr/bin/bash -c "echo KUBELET_IMAGE_URL={{.kubelet_image_url}} > /etc/kubernetes/kubelet.env; echo KUBELET_IMAGE_TAG=$(tr '+' '_' < /etc/kubernetes/kube.version) >> /etc/kubernetes/kubelet.env; rm /etc/kubernetes/kube.version"
         Restart=on-failure
         RestartSec=10
         [Install]
@@ -54,6 +70,7 @@ systemd:
           --volume var-log,kind=host,source=/var/log \
           --mount volume=var-log,target=/var/log \
           --insecure-options={{.rkt_insecure_options}}"
+        ExecStartPre=/usr/bin/systemctl set-environment KUBELET_IMAGE_URL={{.rkt_image_protocol}}${KUBELET_IMAGE_URL}
         ExecStartPre=/bin/mkdir -p /etc/kubernetes/manifests
         ExecStartPre=/bin/mkdir -p /etc/kubernetes/cni/net.d
         ExecStartPre=/bin/mkdir -p /etc/kubernetes/checkpoint-secrets
@@ -83,7 +100,6 @@ systemd:
         RestartSec=5
         [Install]
         WantedBy=multi-user.target
-
 storage:
   files:
     - path: /etc/kubernetes/.empty
@@ -108,3 +124,9 @@ passwd:
     - name: core
       ssh_authorized_keys:
         - {{.ssh_authorized_key}}
+{{if gt (len .append_configs) 0}}
+ignition:
+  config:
+    append: {{range .append_configs}}
+      - source: "{{.}}"
+{{end}}
