--- a/platforms/metal/cl/bootkube-controller.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-controller.yaml.tmpl
@@ -38,6 +38,11 @@ systemd:
     - name: bootkube.service
       enable: false
       contents: {{.ign_bootkube_service_json}}
+    - name: update-ca-certificates.service
+      enable: true
+      dropins:
+        - name: 10-alwaysrun.conf
+          contents: {{.ign_update_ca_certificates_dropin_json}}
 {{ if eq .exclude_tectonic "0" }}
     - name: tectonic.path
       enable: true
@@ -69,6 +74,11 @@ storage:
       mode: 0644
       contents:
         inline: {{.ign_installer_runtime_mappings_json}}
+    - path: /etc/ssl/certs/custom_ca_certs.pem
+      filesystem: root
+      mode: 0400
+      contents:
+        inline: {{.ign_custom_ca_certs_json}}
 passwd:
   users:
     - name: core
