modules/ignition,platforms/*: Add option to start iscsid service
Allows iscsid service to be started for environments that need to attach
iscsi volumes to nodes.

--- a/platforms/metal/cl/bootkube-controller.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-controller.yaml.tmpl
@@ -51,6 +51,8 @@ systemd:
       enable: false
       contents: {{.ign_tectonic_service_json}}
 {{end}}
+    - name: iscsid.service
+      enable: {{.iscsi.enabled}}
 storage:
   files:
     - path: /etc/hostname
