modules/ignition,platforms/*: Allow NFS configuration on CL nodes
This will allow for the configuration of NFS to, for example, specify
versions of NFS protocol that may be used.  It is flexible enough to
allow any configuration desired by allowing the contents of the config
file to be passed in as a tfvar.

--- a/platforms/metal/cl/bootkube-worker.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-worker.yaml.tmpl
@@ -63,6 +63,11 @@ storage:
       mode: 0400
       contents:
         inline: {{.ign_custom_ca_certs_json}}
+    - path: /etc/conf.d/nfs
+      filesystem: root
+      mode: 0644
+      contents:
+        inline: {{.ign_nfs_config_json}}
 passwd:
   users:
     - name: core
