--- a/platforms/metal/cl/bootkube-controller.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-controller.yaml.tmpl
@@ -91,6 +91,11 @@ storage:
       mode: 0644
       contents:
         inline: {{.ign_systemd_default_env_json}}
+    - path: /etc/conf.d/nfs
+      filesystem: root
+      mode: 0644
+      contents:
+        inline: {{.ign_nfs_config_json}}
 passwd:
   users:
     - name: core
