add kubeconfig via ignition for baremetal

--- a/platforms/metal/cl/bootkube-controller.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-controller.yaml.tmpl
@@ -67,6 +67,12 @@ storage:
       mode: 0644
       contents:
         inline: {{.ign_installer_kubelet_env_json}}
+    - path: /etc/kubernetes/kubeconfig
+      filesystem: root
+      mode: 0644
+      contents:
+        inline:
+          {{.ign_kubeconfig_json}}
     - path: /etc/kubernetes/installer/runtime-mappings.yaml
       filesystem: root
       mode: 0644
