platforms/metal: fix iscsi variable in Matchbox templates

--- a/platforms/metal/cl/bootkube-controller.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-controller.yaml.tmpl
@@ -52,7 +52,7 @@ systemd:
       contents: {{.ign_tectonic_service_json}}
 {{end}}
     - name: iscsid.service
-      enable: {{.iscsi.enabled}}
+      enable: {{.iscsi_enabled}}
 storage:
   files:
     - path: /etc/hostname
