--- a/platforms/metal/cl/bootkube-worker.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-worker.yaml.tmpl
@@ -33,7 +33,7 @@ systemd:
         - name: 10-alwaysrun.conf
           contents: {{.ign_update_ca_certificates_dropin_json}}
     - name: iscsid.service
-      enable: {{.iscsi.enabled}}
+      enable: {{.iscsi_enabled}}
 
 storage:
   files:
