--- a/platforms/metal/cl/bootkube-worker.yaml.tmpl
+++ b/platforms/metal/cl/bootkube-worker.yaml.tmpl
@@ -37,16 +37,6 @@ systemd:
 
 storage:
   files:
-    - path: /etc/kubernetes/installer/kubelet.env
-      filesystem: root
-      mode: 0644
-      contents:
-        inline: {{.ign_installer_kubelet_env_json}}
-    - path: /etc/kubernetes/installer/runtime-mappings.yaml
-      filesystem: root
-      mode: 0644
-      contents:
-        inline: {{.ign_installer_runtime_mappings_json}}
     - path: /etc/hostname
       filesystem: root
       mode: 0644
@@ -58,11 +48,17 @@ storage:
       mode: 0644
       contents:
         inline: {{.ign_max_user_watches_json}}
-    - path: /etc/ssl/certs/custom_ca_certs.pem
+    - path: /etc/kubernetes/installer/kubelet.env
       filesystem: root
-      mode: 0400
+      mode: 0644
       contents:
-        inline: {{.ign_custom_ca_certs_json}}
+        inline: {{.ign_installer_kubelet_env_json}}
+    - path: /etc/kubernetes/installer/runtime-mappings.yaml
+      filesystem: root
+      mode: 0644
+      contents:
+        inline: {{.ign_installer_runtime_mappings_json}}
+${ign_custom_ca_certs}
     - path: /etc/profile.env
       filesystem: root
       mode: 0644
